--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "secret",
-    "database": "YOUR_PROJECT_NAME_HERE_development",
+    "database": "Friendly_GAME_DB",
     "host": "localhost",
     "dialect": "postgres",
     "operatorsAliases": "0"
